Replace Apache Commons Lang with working Calculator example
Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>