@@ -90,77 +90,186 @@ java -Djdk.attach.allowAttachSelf=true -jar jallele.jar \
 | `com.example.*` | `com.example.MyClass` | `com.example.sub.MyClass` |
 | `com.example.**` | `com.example.MyClass`<br>`com.example.sub.MyClass`<br>`com.example.sub.deep.MyClass` | `com.other.MyClass` |
 | `**Test` | `com.example.MyTest`<br>`MyTest`<br>`org.test.SomeTest` | `com.example.MyTestHelper` |
-| `*Test` | `MyTest`<br>`SimpleTest` | `com.example.MyTest` |
+| `*Test` | `MyTest`<br>`SimpleTest` | `com.example.sub.MyTest` |
 | `com.example.*.Test` | `com.example.MyTest`<br>`com.example.SimpleTest` | `com.example.sub.MyTest` |
 
-## Real-World Example: Apache Commons Lang
+## Real-World Example: Simple Calculator Project
 
-Here's how you would test Apache Commons Lang if it was a project you were working on:
+Here's a complete working example you can try:
 
-### Step 1: Build the Project
+### Step 1: Create the Project
 
 ```bash
-git clone https://github.com/apache/commons-lang.git
-cd commons-lang
+# Create project structure
+mkdir -p calculator-project/src/main/java/com/example
+mkdir -p calculator-project/src/test/java/com/example
+cd calculator-project
+
+# Create Calculator.java
+cat > src/main/java/com/example/Calculator.java << 'EOF'
+package com.example;
+
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+    
+    public int subtract(int a, int b) {
+        return a - b;
+    }
+    
+    public int multiply(int a, int b) {
+        return a * b;
+    }
+    
+    public int divide(int a, int b) {
+        if (b == 0) throw new IllegalArgumentException("Division by zero");
+        return a / b;
+    }
+}
+EOF
+
+# Create CalculatorTest.java
+cat > src/test/java/com/example/CalculatorTest.java << 'EOF'
+package com.example;
+
+import org.junit.Test;
+import static org.junit.Assert.*;
+
+public class CalculatorTest {
+    @Test
+    public void testAdd() {
+        Calculator calc = new Calculator();
+        assertEquals(5, calc.add(2, 3));
+    }
+    
+    @Test
+    public void testSubtract() {
+        Calculator calc = new Calculator();
+        assertEquals(1, calc.subtract(3, 2));
+    }
+    
+    @Test
+    public void testMultiply() {
+        Calculator calc = new Calculator();
+        assertEquals(6, calc.multiply(2, 3));
+    }
+    
+    @Test
+    public void testDivide() {
+        Calculator calc = new Calculator();
+        assertEquals(2, calc.divide(6, 3));
+    }
+    
+    @Test(expected = IllegalArgumentException.class)
+    public void testDivideByZero() {
+        Calculator calc = new Calculator();
+        calc.divide(5, 0);
+    }
+}
+EOF
+
+# Create pom.xml
+cat > pom.xml << 'EOF'
+<project xmlns="http://maven.apache.org/POM/4.0.0">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.example</groupId>
+    <artifactId>calculator</artifactId>
+    <version>1.0.0</version>
+    
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+</project>
+EOF
+
+# Compile the project
 mvn clean test-compile
 ```
 
 ### Step 2: Run JAllele Mutation Testing
 
-**Note:** Apache Commons Lang uses package-private test classes that cannot be run directly by JUnit through JAllele. For demonstration purposes with Apache Commons Lang, you would need to use explicit class names for the few public test classes, or consider testing a different project.
-
-**Alternative:** Use JAllele with your own project where test classes are public, or test individual classes explicitly:
-
 ```bash
-# Example with explicit class names (if you know specific public test classes)
 java -Djdk.attach.allowAttachSelf=true -jar jallele.jar \
-  --count 100 \
+  --count 10 \
   --junit \
-  --source-classes org.apache.commons.lang3.StringUtils \
-  --test-classes org.apache.commons.lang3.StringUtilsTest \
+  --source-path target/classes \
+  --source-patterns 'com.example.**' \
+  --test-path target/test-classes \
+  --test-patterns 'com.example.**Test' \
   --log-level INFO
 ```
 
-**Better approach:** Test your own project with public test classes:
+**Expected Output:**
+- JAllele will discover the Calculator class and CalculatorTest
+- It will introduce 10 mutations to the Calculator class
+- The tests should detect most or all of the mutations
+- You'll see a summary like `Results: 10/10 (1.0)` indicating all mutations were caught
+
+## Real-World Example: Your Own Project
+
+JAllele works best with projects that follow standard Java testing conventions (public test classes). Here's how to use it with your Maven or Gradle project:
+
+### Maven Projects
 
 ```bash
-# Your project with public test classes
+# Build your project
+mvn clean test-compile
+
+# Run JAllele
 java -Djdk.attach.allowAttachSelf=true -jar jallele.jar \
   --count 100 \
   --junit \
   --source-path target/classes \
-  --source-patterns 'com.yourproject.**' \
+  --source-patterns 'com.yourcompany.yourproject.**' \
   --test-path target/test-classes \
-  --test-patterns 'com.yourproject.**Test' \
+  --test-patterns 'com.yourcompany.yourproject.**Test' \
   --log-level INFO
 ```
 
-## Real-World Example: Google Guava
-
-For a multi-module project like Guava:
-
-### Step 1: Build the Project
+### Gradle Projects
 
 ```bash
-git clone https://github.com/google/guava.git
-cd guava
-mvn clean test-compile -pl guava
+# Build your project
+./gradlew compileJava compileTestJava
+
+# Run JAllele
+java -Djdk.attach.allowAttachSelf=true -jar jallele.jar \
+  --count 100 \
+  --junit \
+  --source-path build/classes/java/main \
+  --source-patterns 'com.yourcompany.yourproject.**' \
+  --test-path build/classes/java/test \
+  --test-patterns 'com.yourcompany.yourproject.**Test' \
+  --log-level INFO
 ```
 
-### Step 2: Run JAllele Mutation Testing
+### Multi-Module Projects
 
-Test the collections package:
+For multi-module Maven or Gradle projects:
 
 ```bash
 java -Djdk.attach.allowAttachSelf=true -jar jallele.jar \
-  --count 200 \
+  --count 100 \
   --junit \
-  --source-path guava/target/classes \
-  --source-patterns 'com.google.common.collect.**' \
-  --test-path guava/target/test-classes \
-  --test-patterns 'com.google.common.collect.**Test' \
+  --source-path module1/target/classes module2/target/classes \
+  --source-patterns 'com.yourcompany.**' \
+  --test-path module1/target/test-classes module2/target/test-classes \
+  --test-patterns 'com.yourcompany.**Test' \
   --log-level INFO
 ```
+
+**Note on Test Class Visibility:** JUnit requires test classes to be public. Some open-source projects (like Apache Commons Lang) use package-private test classes which cannot be discovered and run through JAllele's pattern-based approach. If you encounter this, use explicit class names with `--source-classes` and `--test-classes` options instead.
 
 ## TestNG Support
 
